# device_board_unionman

./: OAT.xml
unionpi_tiger/: BUILD.gn  NOTICE  README_zh.md  bundle.json  device.gni  ohos.build
unionpi_tiger/bootloader/images/: openharmony.conf
unionpi_tiger/common/images/: system_image_conf.txt  userdata_image_conf.txt  vendor_image_conf.txt
unionpi_tiger/common/reboot/: BUILD.gn
unionpi_tiger/config/: BUILD.gn  fstab.A311D
unionpi_tiger/config/distributedhardware/: distributed_hardware_components_cfg.json
unionpi_tiger/config/etc/: display_manager_config.xml  sysctl.conf
unionpi_tiger/config/init/: init.A311D.usb.cfg
unionpi_tiger/config/init/arm/: init.A311D.cfg  init.A311D.sh
unionpi_tiger/config/init/arm64/: init.A311D.cfg  init.A311D.sh
unionpi_tiger/config/preinstall/: install_list_capability.json
unionpi_tiger/hardware/: BUILD.gn
unionpi_tiger/hardware/audio_alsa/: BUILD.gn
unionpi_tiger/hardware/audio_alsa/src/: audio_interface_lib_capture_alsa.c  audio_interface_lib_render_alsa.c
unionpi_tiger/hardware/bt/: BUILD.gn
unionpi_tiger/hardware/camera/: BUILD.gn
unionpi_tiger/hardware/camera/demo/: BUILD.gn
unionpi_tiger/hardware/camera/device_manager/: BUILD.gn
unionpi_tiger/hardware/camera/device_manager/test/unittest/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/include/: v4l2_buffer.h
unionpi_tiger/hardware/camera/driver_adapter/src/: v4l2_buffer.cpp  v4l2_fileformat.cpp
unionpi_tiger/hardware/camera/driver_adapter/test/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/test/unittest/: BUILD.gn
unionpi_tiger/hardware/camera/driver_adapter/test/unittest/src/: utest_v4l2.cpp
unionpi_tiger/hardware/camera/driver_adapter/test/v4l2_test/: BUILD.gn
unionpi_tiger/hardware/camera/metadata_manager/: BUILD.gn
unionpi_tiger/hardware/camera/pipeline_core/: BUILD.gn
unionpi_tiger/hardware/camera/pipeline_core/src/node/: aml_codec_node.cpp  aml_codec_node.h
unionpi_tiger/hardware/camera/pipeline_core/test/unittest/: BUILD.gn
unionpi_tiger/kernel/drivers/: Kconfig  Makefile
unionpi_tiger/kernel/drivers/battery/: battery.c
unionpi_tiger/kernel/drivers/isp/drivers/subdev/iq/: Makefile
unionpi_tiger/kernel/drivers/isp/drivers/subdev/sensor/: Makefile
unionpi_tiger/kernel/drivers/isp/drivers/subdev/sensor/app/: soc_sensor.c
unionpi_tiger/kernel/drivers/isp/drivers/subdev/sensor/src/driver/sensor/: OV08a10_seq.h
unionpi_tiger/kernel/drivers/isp/drivers/subdev/sensor/src/fw/: runtime_initialization_settings.h
unionpi_tiger/kernel/drivers/rtl88x2cs/: Makefile
unionpi_tiger/kernel/drivers/rtl88x2cs/core/: rtw_ap.c  rtw_mp.c  rtw_wapi.c  rtw_wapi_sms4.c  rtw_wlan_util.c  rtw_xmit.c
unionpi_tiger/kernel/drivers/rtl88x2cs/hal/: hal_btcoex.c  hal_com.c
unionpi_tiger/kernel/drivers/rtl88x2cs/hal/phydm/: phydm_cck_pd.c  phydm_phystatus.c  phydm_rainfo.c
unionpi_tiger/kernel/drivers/rtl88x2cs/hal/phydm/halrf/: halrf_kfree.c
unionpi_tiger/kernel/drivers/rtl88x2cs/hal/phydm/halrf/rtl8822c/: halrf_8822c.c  halrf_dpk_8822c.c  halrf_tssi_8822c.c
unionpi_tiger/kernel/drivers/rtl88x2cs/os_dep/linux/: ioctl_linux.c
unionpi_tiger/kernel/hdf/audio/codec/soc_codec/: a311d_codec_ops.c
unionpi_tiger/kernel/hdf/audio/dai/: a311d_dai_ops.c
unionpi_tiger/kernel/hdf/wifi/rtl8822cs/: Makefile
unionpi_tiger/resource/: BUILD.gn
unionpi_tiger/resource/hap/: DeviceManager_UI.hap  README_zh.md
unionpi_tiger/updater/: BUILD.gn  fstab.updater
