#Copyright (c) 2022 Unionman Technology Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni")
import("device.gni")

print("unionpi_tiger_group build")
group("unionpi_tiger_group") {
  deps = [
    "common:common",
    "config:init_configs",
    "hardware:hardware",
    "kernel:kernel",
    "resource:resource",
    "updater:updater_files",
  ]

  deps += [
    "//device/soc/amlogic/a311d/hardware:hardware_group",
    "//device/soc/amlogic/a311d/hardware/display:display_buffer_model",
    "//device/soc/amlogic/a311d/hardware/display:display_composer_model",
    "//vendor/unionman/unionpi_tiger/sample:sample_group",
  ]
}
