# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("init.without_two_stages.cfg") {
  source = "init.without_two_stages.cfg"
  module_install_dir = "etc"
  install_images = [ "system" ]
  install_enable = true
  part_name = "unionman_products"
}

ohos_prebuilt_etc("init.A311D.cfg") {
  if (target_cpu == "arm") {
    source = "init/arm/init.A311D.cfg"
  } else {
    source = "init/arm64/init.A311D.cfg"
  }
  install_images = [ chipset_base_dir ]
  install_enable = true
  part_name = "unionman_products"
}

ohos_prebuilt_etc("init.A311D.usb.cfg") {
  source = "init/init.A311D.usb.cfg"
  install_images = [ chipset_base_dir ]
  install_enable = true
  part_name = "unionman_products"
}

ohos_prebuilt_executable("init.A311D.sh") {
  if (target_cpu == "arm") {
    source = "init/arm/init.A311D.sh"
  } else {
    source = "init/arm64/init.A311D.sh"
  }
  module_install_dir = "bin"
  install_images = [ chipset_base_dir ]
  part_name = "unionman_products"
  install_enable = true
}

ohos_prebuilt_etc("50.usb.rules") {
  source = "udev/50-usb.rules"
  module_install_dir = "etc/udev/rules.d"
  install_images = [ "system" ]
  part_name = "unionman_products"
  install_enable = true
}

ohos_prebuilt_etc("udisk_mount.sh") {
  source = "udisk_mount.sh"
  module_install_dir = "bin"
  install_images = [ "system" ]
  part_name = "unionman_products"
  install_enable = true
}

ohos_prebuilt_etc("sdcard_mount.sh") {
  source = "sdcard_mount.sh"
  module_install_dir = "bin"
  install_images = [ "system" ]
  part_name = "unionman_products"
  install_enable = true
}

ohos_prebuilt_etc("fstab.A311D") {
  source = "fstab.A311D"
  part_name = "unionman_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("selinux_config") {
  source = "selinux/config"
  part_name = "unionman_products"
  module_install_dir = "etc/selinux"
  install_images = [ "system" ]
  install_enable = true
}

ohos_copy("fstab.required") {
  sources = [ "fstab.A311D" ]
  outputs = [ "$root_build_dir/fstab.required" ]
}

ohos_prebuilt_etc("install_list_config") {
  source = "preinstall/install_list.json"
  relative_install_dir = "app"
  part_name = "unionman_products"
}

ohos_prebuilt_etc("uninstall_list_config") {
  source = "preinstall/uninstall_list.json"
  relative_install_dir = "app"
  part_name = "unionman_products"
}

ohos_prebuilt_etc("install_list_capability_config") {
  source = "preinstall/install_list_capability.json"
  relative_install_dir = "app"
  part_name = "unionman_products"
}

ohos_prebuilt_etc("install_list_permissions_config") {
  source = "preinstall/install_list_permissions.json"
  relative_install_dir = "app"
  part_name = "unionman_products"
}

ohos_prebuilt_etc("distributed_hardware_components_cfg") {
  source = "distributedhardware/distributed_hardware_components_cfg.json"
  install_enable = true
  module_install_dir = "etc/distributedhardware/"
  install_images = [ chipset_base_dir ]
  part_name = "unionman_products"
}

ohos_prebuilt_etc("para_for_chip_prod") {
  source = "etc/para/hardware_unionpi_tiger.para"
  install_images = [ chip_prod_base_dir ]
  relative_install_dir = "para"
  part_name = "unionman_products"
}

ohos_prebuilt_etc("para_for_sys_prod") {
  source = "etc/para/product_unionpi_tiger.para"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir = "para"
  part_name = "unionman_products"
}

group("init_configs") {
  deps = [
    ":50.usb.rules",
    ":distributed_hardware_components_cfg",
    ":fstab.A311D",
    ":fstab.required",
    ":init.A311D.cfg",
    ":init.A311D.sh",
    ":init.A311D.usb.cfg",
    ":install_list_capability_config",
    ":install_list_config",
    ":install_list_permissions_config",
    ":para_for_chip_prod",
    ":para_for_sys_prod",
    ":sdcard_mount.sh",
    ":selinux_config",
    ":udisk_mount.sh",
    ":uninstall_list_config",
  ]
}
