# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

BOOTANIMATION_DIR =
    "//device/board/unionman/unionpi_tiger/resource/bootanimation"

ohos_prebuilt_etc("bootanimation-800x480") {
  source = "$BOOTANIMATION_DIR/bootanimation-800x480.raw"
  part_name = "unionman_products"
  install_enable = true
}

ohos_prebuilt_etc("DeviceManager_UI.hap") {
  source = "hap/DeviceManager_UI.hap"
  install_images = [ "system" ]
  module_install_dir = "app/com.ohos.devicemanagerui"
  part_name = "unionman_products"
  install_enable = true
}

group("resource") {
  deps = [
    ":DeviceManager_UI.hap",
    ":bootanimation-800x480",
    "//vendor/unionman/unionpi_tiger/resourceschedule:resourceschedule",
  ]
}
