# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("updater_init.cfg") {
  source = "init.cfg"
  install_images = [ "updater" ]
  install_enable = true
  part_name = "device_unionpi_tiger"
}

ohos_prebuilt_etc("updater_usb_init.cfg") {
  source = "init.usb.cfg"
  install_images = [ "updater" ]
  install_enable = true
  part_name = "device_unionpi_tiger"
}

ohos_prebuilt_etc("updater_init_usb_configfs.cfg") {
  source = "init.usb.configfs.cfg"
  install_images = [ "updater" ]
  install_enable = true
  part_name = "device_unionpi_tiger"
}

ohos_prebuilt_etc("signing_cert.crt") {
  source = "signing_cert.crt"
  module_install_dir = "etc/certificate"
  install_images = [ "updater" ]
  install_enable = true
  part_name = "device_unionpi_tiger"
}

ohos_prebuilt_etc("fstab.updater") {
  source = "fstab.updater"
  install_images = [ "updater" ]
  install_enable = true
  part_name = "device_unionpi_tiger"
}

if (enable_ramdisk) {
  ohos_copy("updater_ramdisk_resource_config.ini") {
    sources = [ "updater_ramdisk_resource_config.ini" ]
    outputs =
        [ "$product_output_dir/phone/updater_ramdisk_resource_config.ini" ]
  }
}

group("updater_files") {
  deps = [
    ":fstab.updater",
    ":signing_cert.crt",
    ":updater_init.cfg",
    ":updater_init_usb_configfs.cfg",
    ":updater_usb_init.cfg",
  ]
  if (enable_ramdisk) {
    deps += [ ":updater_ramdisk_resource_config.ini" ]
  }
}
