# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/camera/camera.gni")

config("v4l2_maintest") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-error",
    "-DGST_DISABLE_DEPRECATED",
    "-DHAVE_CONFIG_H",
    "-DCOLORSPACE=\"videoconvert\"",
    "-fno-strict-aliasing",
    "-Wno-sign-compare",
    "-Wno-builtin-requires-header",
    "-Wno-unused-variable",
    "-Wno-unused-label",
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-int-conversion",
    "-Wno-unused-function",
    "-Wno-thread-safety-attributes",
    "-Wno-inconsistent-missing-override",
    "-fno-rtti",
    "-fno-exceptions",
    "-ffunction-sections",
    "-fdata-sections",
  ]
}

ohos_executable("v4l2_main") {
  install_enable = true
  sources = [
    "$board_camera_path/driver_adapter/src/v4l2_buffer.cpp",
    "$board_camera_path/driver_adapter/src/v4l2_control.cpp",
    "$board_camera_path/driver_adapter/src/v4l2_dev.cpp",
    "$board_camera_path/driver_adapter/src/v4l2_fileformat.cpp",
    "$board_camera_path/driver_adapter/src/v4l2_stream.cpp",
    "$board_camera_path/driver_adapter/src/v4l2_uvc.cpp",
    "./v4l2_main.cpp",
  ]

  include_dirs = [
    "$board_camera_path/driver_adapter/main_test",
    "$camera_path/include",
    "$board_camera_path/driver_adapter/include",
    "//device/soc/amlogic/a311d/hardware/ge2d/include",
  ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  deps = [ "//device/soc/amlogic/a311d/hardware/ge2d:libge2d" ]

  defines += [ "V4L2_MAIN_TEST" ]

  install_enable = true
  public_configs = [ ":v4l2_maintest" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_camera"
}
